--- a/Italiano/IAPProduct-a1c8.json
+++ b/Italiano/IAPProduct-a1c8.json
@@ -184,6 +184,16 @@
       "id": 450,
       "name": "Pacchetto Crescita Identità",
       "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Nuova Estrazione Mirata - Shi Est Sezione 3 Faust」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
+    },
+    {
+      "id": 451,
+      "name": "Pacchetto Estrazione Mirata",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Assassinio sul WARP Express BokGak」.\n\n· Biglietto per Decaestrazione x4"
+    },
+    {
+      "id": 452,
+      "name": "Pacchetto Crescita Identità",
+      "desc": "Puoi ottenere i seguenti oggetti da questo Pacchetto Commemorativo per 「Intervallo IV: Assassinio sul WARP Express BokGak」.\n\n\n· Modulo Lancio - Legame ID x 1\n· Biglietto per Addestramento Identità IV x 60\n· Biglietto per Addestramento Identità III x 30"
     }
   ]
 }
