--- a/Italiano/reward-popup-text-ProjectGS.json
+++ b/Italiano/reward-popup-text-ProjectGS.json
@@ -2,53 +2,53 @@
   "dataList": [
     {
       "id": "UNIT_LEVEL_UPGRADE",
-      "add": "{0} gained {1} Level(s)",
-      "min": "{0} lost {1} Level(s)"
+      "add": "{0} ha ottenuto {1} Levello/i",
+      "min": "{0} ha perso {1} Levello/i"
     },
     {
       "id": "MAX_HP_ADD_UPGRADE",
-      "add": "{0} gained {1} max HP",
-      "min": "{0} lost {1} max HP"
+      "add": "{0} ha ottenuto {1} PV max",
+      "min": "{0} ha perso {1} PV max"
     },
     {
       "id": "ATK_UPGRADE",
-      "add": "{0} gained {1} Offense Level(s)",
-      "min": "{0} lost {1} Offense Level(s)"
+      "add": "{0} ha ottenuto {1} Livello/i Offensivo",
+      "min": "{0} ha perso {1} Livello/i Offensivo"
     },
     {
       "id": "DEF_UPGRADE",
-      "add": "{0} gained {1} Defense Level(s)",
-      "min": "{0} lost {1} Defense Level(s)"
+      "add": "{0} ha ottenuto {1} Livello/i Difensivo",
+      "min": "{0} ha perso {1} Livello/i Difensivo""
     },
     {
       "id": "SPEED_RANGE_UPGRADE",
-      "add": "{0} Min & Max Speed +{1}",
-      "min": "{0} Min & Max Speed -{1}"
+      "add": "{0} Velocità Min & Max +{1}",
+      "min": "{0} Velocità Min & Max -{1}"
     },
     {
       "id": "ATK_SLASH_RESIST_UPGRADE",
-      "add": "{0}'s Slash Resist.: {1}",
-      "min": "{0}'s Slash Resist.: +{1}"
+      "add": "Resistenza Tagliente di {0}: {1}",
+      "min": "Resistenza Tagliente di {0}: +{1}"
     },
     {
       "id": "ATK_PENETRATE_RESIST_UPGRADE",
-      "add": "{0}'s Pierce Resist.: {1}",
-      "min": "{0}'s Pierce Resist.: +{1}"
+      "add": "Resistenza Perforante di {0}: {1}",
+      "min": "Resistenza Perforante di {0}: +{1}"
     },
     {
       "id": "ATK_HIT_RESIST_UPGRADE",
-      "add": "{0}'s Blunt Resist.: {1}",
-      "min": "{0}'s Blunt Resist.: +{1}"
+      "add": "Resistenza Contundente di {0}: {1}",
+      "min": "Resistenza Contundente di {0}: +{1}"
     },
     {
       "id": "ATTRIBUTE_CRIMSON_RESIST_UPGRADE",
-      "add": "{0}'s Wrath Resist.: {1}",
-      "min": "{0}'s Wrath Resist.: +{1}"
+      "add": "Resistenza Ira di {0}: {1}",
+      "min": "Resistenza Ira di {0}: +{1}"
     },
     {
       "id": "ATTRIBUTE_SCARLET_RESIST_UPGRADE",
-      "add": "{0}'s Lust Resist.: {1}",
-      "min": "{0}'s Lust Resist.: +{1}"
+      "add": "Resistenza Lussuria di {0}: {1}",
+      "min": "Resistenza Lussuria di {0}: +{1}"
     },
     {
       "id": "ATTRIBUTE_AMBER_RESIST_UPGRADE",
@@ -77,23 +77,23 @@
     },
     {
       "id": "ACQUIRE_SKILL",
-      "add": "{0} learned [{1}] Skill",
-      "min": "{0} forgot [{1}] Skill"
+      "add": "{0} ha imparato [{1}]",
+      "min": "{0} ha dimenticato [{1}]"
     },
     {
       "id": "SKILL_UPGRADE",
-      "add": "{0}'s [{1}] Skill improved!",
-      "min": "{0} weakened their [{1}] Skill"
+      "add": "L'Abilità [{1}] di {0} è migliorata!",
+      "min": "L'Abilità [{1}] di {0} è peggiorata"
     },
     {
       "id": "ACQUIRE_PASSIVE",
-      "add": "{0} learned [{1}] Passive",
-      "min": "{0} forgot [{1}] Passive"
+      "add": "{0} ha imparato la Passiva [{1}]",
+      "min": "{0} ha dimenticato la Passiva [{1}]"
     },
     {
       "id": "PASSIVE_UPGRADE",
-      "add": "{0}'s [{1}] Passive improved!",
-      "min": "{0} weakened their [{1}] Passive"
+      "add": "La Passiva [{1}] di {0} è migliorata!",
+      "min": "La Passiva [{1}] di {0} è peggiorata"
     }
   ]
 }
