--- a/Italiano/ProjectGSLessonName.json
+++ b/Italiano/ProjectGSLessonName.json
@@ -12,7 +12,7 @@
     },
     {
       "id": 3,
-      "content": "Appassionati & Sogna! - Storia dei Fixer",
+      "content": "Appassionati e Sogna! - Storia dei Fixer",
       "teacher": "Don Quixote"
     },
     {
@@ -37,7 +37,7 @@
     },
     {
       "id": 8,
-      "content": "Ottenimento d'Informazioni - Metti all'Angolo il Tuo Nemico",
+      "content": "Ottenere Informazioni - Metti all'Angolo il Tuo Nemico",
       "teacher": "Outis"
     },
     {
@@ -57,8 +57,8 @@
     },
     {
       "id": 12,
-      "content": "『Racconti Sconclusionati di un Ubriacone (酔手野話)』",
-      "teacher": "The Night Drifter"
+      "content": "『Racconti Sconclusionati del Palmo Ubriaco (酔手野話)』",
+      "teacher": "Il Vagabondo della Notte"
     },
     {
       "id": 13,
