--- a/Italiano/SeasonTitle.json
+++ b/Italiano/SeasonTitle.json
@@ -18,7 +18,7 @@
     },
     {
       "id": "season_9101_walpurgisnacht",
-      "content": "Notte di Valpurga"
+      "content": "Notte di Walpurgis"
     },
     {
       "id": "season_title_3",
